Fixed Stars z-indexes

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,8 +13,10 @@
   display: grid;
   overflow-y: visible;
   grid-template-columns: 1fr 3fr;
+  z-index: 4;
 }
 .modal-background {
+  z-index: 3;
   position: fixed;
   top: 0;
   left: 0;
@@ -312,20 +314,27 @@ img {
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
   margin: 5px 10px 3px 10px;
 }
-.rating-bar:after {
-  content: '\A';
+.rating-bar-top {
+  color: #e7711b;
+  padding: 0;
   position: absolute;
-  background-color: #bd5b0d;
-  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3) 0px, rgba(255, 255, 255, 0) 100%);
+  z-index: 2;
+  display: block;
   top: 0;
-  bottom: 0;
   left: 0;
-  width: 70%;
+  height: 10px;
+  overflow: hidden;
+}
+.rating-bar-bottom {
+  padding: 0;
+  display: block;
+  z-index: 0;
+  height: 10px;
 }
 #review-index {
   padding: 16px 16px 16px 12px;
 }
-.star-ratings-css {
+.star-ratings {
   unicode-bidi: bidi-override;
   display: inline-block;
   color: #c5c5c5;
@@ -337,18 +346,17 @@ img {
   padding: 0;
   text-shadow: 0px 1px 0 #a2a2a2;
 }
-.star-ratings-css-top {
+.star-ratings-top {
   color: #e7711b;
   padding: 0;
   position: absolute;
-  z-index: 1;
   display: block;
   top: 0;
   left: 0;
   overflow: hidden;
 }
-.star-ratings-css-bottom {
+.star-ratings-bottom {
   padding: 0;
   display: block;
-  z-index: 0;
+  z-index: -1;
 }
